fixed code according to next comments of mentor Elena Bruyako